--- a/package.json
+++ b/package.json
@@ -11,5 +11,36 @@
     "test:unit": "jest --config jest.config.unit.ts",
     "test:functional": "dotenv -e .env.test -- prisma migrate reset --force --skip-generate --skip-seed && dotenv -e .env.test -- jest --config jest.config.functional.ts",
     "test": "yarn run test:unit && yarn run test:functional"
+  },
+  "dependencies": {
+    "@prisma/client": "^5.12.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-typescript": "^7.24.1",
+    "@faker-js/faker": "^8.4.1",
+    "@jest/globals": "^29.7.0",
+    "@paralleldrive/cuid2": "^2.2.2",
+    "@testing-library/dom": "^9.3.4",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/jest": "^29.5.12",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
+    "add": "^2.0.6",
+    "dotenv": "^16.4.5",
+    "dotenv-cli": "^7.4.1",
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.5",
+    "prisma": "^5.12.1",
+    "prisma-dbml-generator": "^0.12.0",
+    "prisma-factory": "^0.1.13",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.4",
+    "yarn": "^1.22.22"
   }
 }
